src/test/c/reject/36-nested-interface-missing-block.arcx
interface A {
    interface B
        foo: int;
    }
} 